--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: "HoKick" # 상단 헤더에 보이는 블로그 명
 title_separator: "&#124;"
 subtitle: # site tagline that appears below site title in masthead
 name: "qkqrhkr" # 블로그 닉네임 설정
-description: "this is my blog!" # 블로그 설명
+description: "HoKick DevLog!" # 블로그 설명
 url: "https://rhkrqkq.github.io" # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: "rhkrqkq/rhkrqkq.github.io" # GitHub Repo 이름
@@ -98,16 +98,16 @@ analytics:
 
 # Site Author
 author:
-  name: "your name here" # 블로그 닉네임
+  name: "qkqrhkr" # 블로그 닉네임
   avatar: "/assets/images/meee.png" # 블로그 프로필 사진
-  #   bio              : "hi all!"
-  # location         : "Seoul, Korea"
-  # email            : "youremailhere@xxxxxx.com"
+  bio              : "광운대학교 정보융합학부에 재학중인 곽경원입니다. BackEnd를 공부하고 있으며 Infra에 관심이 있습니다."
+  location         : "Seoul, Korea"
+  email            : "rhkrqkq1025@gmail.com"
 
   links: # 사이트 링크
-#     - label: "Email"
-#       icon: "fas fa-fw fa-envelope-square"
-#       # url: "mailto:your.name@email.com"
+     - label: "Email"
+       icon: "fas fa-fw fa-envelope-square"
+        url: "mailto:rhkrqkq1025@gmail.com"
 #     - label: "Website"
 #       icon: "fas fa-fw fa-link"
 #       # url: "https://your-website.com"
@@ -117,9 +117,9 @@ author:
 #     - label: "Facebook"
 #       icon: "fab fa-fw fa-facebook-square"
 #       # url: "https://facebook.com/"
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       url: "https://github.com/"
+     - label: "GitHub"
+       icon: "fab fa-fw fa-github"
+       url: "https://github.com/"
 #     - label: "Instagram"
 #       icon: "fab fa-fw fa-instagram"
 #       url: "https://www.instagram.com/"
