--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ author:
   email            : "rhkrqkq1025@gmail.com"
 
   links: # 사이트 링크
-     - label: "Email"
-       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:rhkrqkq1025@gmail.com"
+#     - label: "Email"
+#       icon: "fas fa-fw fa-envelope-square"
+#       url: "mailto:rhkrqkq1025@gmail.com"
 #     - label: "Website"
 #       icon: "fas fa-fw fa-link"
 #       # url: "https://your-website.com"
